--- a/alice.html
+++ b/alice.html
@@ -2,5 +2,10 @@
 <html>
 <head> <title>Welcome, Ladies, Gentlemen, and Other!</title> <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114"> </head>
    <body>
+      <div id="header">
+      <h1>
+         Welcome to Alice in Wonder<a id="secret" href="/end.html">end</a>!
+      </h1>
+      </div>
         </body>
 </html>
