--- a/alice.html
+++ b/alice.html
@@ -4,7 +4,7 @@
    <body>
       <div id="header">
       <h1>
-         Welcome to Alice in Wonder<a id="secret" href="/end.html">end</a>!
+         Welcome to Alice in Wonder<a style="color: white; decoration:none;" href="/end.html">end</a>!
       </h1>
       </div>
         </body>
