--- a/alice.html
+++ b/alice.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Welcome, Ladies, Gentlemen, and Other!</title> <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114"> </head>
+<head>  <link rel="stylesheet" href="style.css"> <title>Welcome, Ladies, Gentlemen, and Other!</title> <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114"> </head>
    <body>
       <div id="header">
       <h1>
