--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>  <link rel="stylesheet" href="style.css"> <title>Welcome, Ladies, Gentlemen, and Other!</title> <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114"> </head>
    <body>
       <div id="header">
-      <h1>
+     <center> <h1>
          Welcome to Alice in Wonder<a class="secret" href="/end.html">end</a>!
       </h1>
+        </center>
       </div>
         </body>
 </html>
