--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       </h1>
         </center>
       </div>
+      <center>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</center>
       <div id="image">
+         <br>
+         <br>
          <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true""/>
       </div>
         </body>
