--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         }
 
         #image img {
-            max-width: 100%;
+            /* Image Size Adjustment: The max-width is set to 500px to make the image smaller. */
+            max-width: 500px;
             height: auto;
             display: block;
             margin: 0 auto;
@@ -58,10 +59,6 @@
         </center>
     </div>
     <center>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</center>
-
-    <div style="height: 400px; text-align: center; padding-top: 50px;">
-        <p>Scroll down to enter the rabbit hole...</p>
-    </div>
 
     <div id="image">
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
