--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Welcome, Ladies, Gentlemen, and Other!</title>
     <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114">
+
     <style>
-@font-face {
-font-family: starborn;
-src: url(https://dl.dropbox.com/s/5zgb9l9rpahgls7/Starborn.otf);
-</style>
-    <style>
+         @import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');
         html {
             scroll-behavior: smooth;
         }
