--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Welcome to Alice in Wonder<a class="secret" href="/end.html">end</a>!
         </h1>
     </div>
-    <center>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</center>
+    <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
 
     <div id="image">
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
