--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Welcome, Ladies, Gentlemen, and Other!</title>
     <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&display=swap" rel="stylesheet">
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');
         html {
             scroll-behavior: smooth;
         }
