--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
     <style>
         html {
             scroll-behavior: smooth;
