--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
     <style>
+        * {
+             font-family: "Cedarville Cursive", cursive;
+        }
         html {
             scroll-behavior: smooth;
         }
