--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
     <style>
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mountains+of+Christmas:wght@400;700&family=Mrs+Sheppards&display=swap');
         * {
              font-family: "Cedarville Cursive", cursive;
         }
@@ -46,6 +47,10 @@
         #image.visible img {
             opacity: 1;
             transform: translateY(0);
+        }
+        h1 {
+            font:Mountains of Christmas;
+
         }
     </style>
 </head>
