--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mountains+of+Christmas:wght@400;700&family=Mrs+Sheppards&display=swap');
-        * {
-             font-family: "Cedarville Cursive", cursive;
-        }
+    
         html {
             scroll-behavior: smooth;
         }
@@ -21,6 +19,7 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
+            font-family: "Cedarville Cursive", cursive;
         }
 
         /*
@@ -49,8 +48,11 @@
             transform: translateY(0);
         }
         h1 {
-            font:Mountains of Christmas;
+            font-family:Mountains of Christmas;
 
+        }
+        p {
+            font-family: "Cedarville Cursive", cursive;
         }
     </style>
 </head>
