--- a/test.html
+++ b/test.html
@@ -1,1 +1,113 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Welcome, Ladies, Gentlemen, and Other!</title>
+    <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery24/37ffb81e.gif?v=29416114">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mountains+of+Christmas:wght@400;700&family=Mrs+Sheppards&display=swap');
+    
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            height: 150vh; 
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            font-family: "Cedarville Cursive", cursive;
+        }
+
+        #image {
+            position: relative;
+            padding: 40px;
+            text-align: center;
+        }
+
+        #image img {
+            max-width: 500px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 1s ease-out, transform 1s ease-out;
+        }
+
+        #image.visible img {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        h1 {
+            font-family:Mountains of Christmas;
+
+        }
+        p {
+            font-family: "Cedarville Cursive", cursive;
+        }
+
+        .site-footer {
+            background-color: #ffffff;
+            padding: 20px 0;
+            text-align: center;
+            border-top: 2px solid #ccc;
+        }
+
+        .site-footer .signature {
+            font-family: 'Mrs Sheppards', cursive;
+            font-size: 2.5em;
+            margin: 0 0 5px 0;
+            color: #333;
+        }
+
+        .site-footer .copyright {
+            font-family: 'Mountains of Christmas', cursive;
+            font-size: 1em;
+            color: #555;
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>
+            Welcome to Alice in Wonder<a class="secret" href="/end.html">end</a>!
+        </h1>
+    </div>
+    <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
+
+    <div id="image">
+        <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
+    </div>
+
+    <footer class="site-footer">
+        <p class="signature">With love,</p>
+        <p class="copyright">&copy; <span id="year"></span> Alice in Wonderend</p>
+    </footer>
+
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const imageContainer = document.getElementById('image');
+            const triggerPoint = window.innerHeight * 0.8;
+
+            function checkVisibility() {
+                const box = imageContainer.getBoundingClientRect();
+
+                if (box.top < triggerPoint) {
+                    imageContainer.classList.add('visible');
+                    window.removeEventListener('scroll', checkVisibility);
+                }
+            }
+
+            checkVisibility();
+            window.addEventListener('scroll', checkVisibility);
+        });
+    </script>
+</body>
+</html>
