--- a/index.html
+++ b/index.html
@@ -86,5 +86,6 @@
             window.addEventListener('scroll', checkVisibility);
         });
     </script>
+    <p style="visibility: hidden;">L2FsaWNlc19leWVfZGlhZ25vc2lzLmpwZWc=</p>
 </body>
 </html>
