--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
         });
     </script>
 <p style="color: transparent; font-family:Arial;">L2FsaWNlc19leWVfZGlhZ25vc2lzLmpwZWc=</p>
+    <a style="text-align: right;" href="/code.html">ADMIN ONLY</a>
 </body>
 </html>
