--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </style>
 </head>
 <body>
+    <main>
     <div class="header">
         <h1>
             Welcome to Alice in Wonder<a class="secret" href="/end.html">end</a>!
@@ -66,6 +67,7 @@
     <div id="image">
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
     </div>
+ <a style="text-align: right;" href="/code.html">ADMIN ONLY</a>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -86,6 +88,6 @@
         });
     </script>
 <p style="color: transparent; font-family:Arial;">L2FsaWNlc19leWVfZGlhZ25vc2lzLmpwZWc=</p>
-    <a style="text-align: right;" href="/code.html">ADMIN ONLY</a>
+        </main>
 </body>
 </html>
