--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="image">
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
     </div>
- <a style="text-align: right;" href="/code.html">ADMIN ONLY</a>
+ <button style="float: right;">ADMIN ONLY</button>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
