--- a/test.html
+++ b/test.html
@@ -92,7 +92,7 @@
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
     </div>
  
-    <a href="/admin-login.html" class="admin-button" title="Site Utility">Admin Only</a>
+    <a href="/admin-secret.html" class="admin-button" title="Site Utility">Admin Only</a>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
