--- a/admin-secret.html
+++ b/admin-secret.html
@@ -107,8 +107,8 @@
             const MAX_LENGTH = 4;
             
             const codeLinks = {
-                '1865': '/Alice in wonderland.html',
-                '0451': '/Fahrenheit 451.html',
+                '1865': '/aliceinwonderland.html',
+                '2010': '/creator.html',
             };
 
             $('.keypad').on('click', function(e) {
