--- a/admin-secret.html
+++ b/admin-secret.html
@@ -105,17 +105,18 @@
     <script>
         $(document).ready(function () {
             const MAX_LENGTH = 4;
-            
+            const display = $('#display');
+            let currentText = display.text().replace(/\*/g, '');
+
             const codeLinks = {
                 '1865': '/aliceinwonderland.html',
                 '2010': '/creator.html',
+                '0451': '/fahrenheit451.html'
             };
 
             $('.keypad').on('click', function(e) {
                 e.preventDefault();
                 const key = $(this).text();
-                const display = $('#display');
-                let currentText = display.text().replace(/\*/g, ''); 
 
                 switch (key) {
                     case 'Clear':
@@ -128,12 +129,13 @@
                         if (currentText.length === MAX_LENGTH) {
                             checkCode(currentText);
                         } else {
+                            // Only alert if the user tries to submit an incomplete code
                             alert(`Please enter a complete ${MAX_LENGTH}-digit code.`);
                         }
                         return;
                     default:
                         if (currentText.length < MAX_LENGTH && key.length === 1) {
-                            if (key.match(/^[0-9+*#]$/)) { 
+                            if (key.match(/^[0-9+*#]$/)) {
                                 currentText += key;
                             }
                         }
@@ -146,16 +148,17 @@
 
             function checkCode(code) {
                 if (codeLinks[code]) {
-                    alert(`Access Granted! Redirecting to ${codeLinks[code]}...`);
-                    // In a live environment, you would use:
-                    // window.location.href = codeLinks[code];
-                    
+                    // *** Direct Redirection without popup ***
+                    window.location.href = codeLinks[code];
+
+                    // Reset code in case redirection is blocked or fails (optional)
                     currentText = '';
-                    $('#display').text('****');
+                    display.text('****');
                 } else {
+                    // Handle non-matching code without redirection
                     alert('Code Accepted. Searching for data...');
                     currentText = '';
-                    $('#display').text('****');
+                    display.text('****');
                 }
             }
         });
