--- a/admin-secret.html
+++ b/admin-secret.html
@@ -101,7 +101,7 @@
             </ul>
         </nav>
     </div>
-
+<a href="https://codepen.io/FlyingEmu">Original by FlyingEmu</a>
     <script>
         $(document).ready(function () {
             const MAX_LENGTH = 4;
