--- a/admin-secret.html
+++ b/admin-secret.html
@@ -9,8 +9,9 @@
             margin: 0;
             padding: 20px;
             display: flex;
+            flex-direction: column; /* Allows main content and footer/credits to stack */
             justify-content: center;
-            align-items: flex-start;
+            align-items: center; /* Center the entire block */
             min-height: 100vh;
             font-family: Arial, sans-serif;
         }
@@ -73,6 +74,18 @@
             transform: translatey(3px);
             box-shadow: 0 0 5px rgb(0, 200, 0);
         }
+        
+        /* New styles for the credit link */
+        #credits {
+            margin-top: 20px;
+            font-size: 10px; /* Much smaller */
+            color: #888; /* Subtle gray text */
+            text-decoration: none; /* Remove underline */
+        }
+        
+        #credits:hover {
+            color: #000;
+        }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -102,6 +115,8 @@
         </nav>
     </div>
 
+    <a href="https://codepen.io/FlyingEmu" id="credits">FlyingEmu</a>
+
     <script>
         $(document).ready(function () {
             const MAX_LENGTH = 4;
@@ -129,7 +144,6 @@
                         if (currentText.length === MAX_LENGTH) {
                             checkCode(currentText);
                         } else {
-                            // Only alert if the user tries to submit an incomplete code
                             alert(`Please enter a complete ${MAX_LENGTH}-digit code.`);
                         }
                         return;
@@ -148,14 +162,11 @@
 
             function checkCode(code) {
                 if (codeLinks[code]) {
-                    // *** Direct Redirection without popup ***
                     window.location.href = codeLinks[code];
 
-                    // Reset code in case redirection is blocked or fails (optional)
                     currentText = '';
                     display.text('****');
                 } else {
-                    // Handle non-matching code without redirection
                     alert('Code Accepted. Searching for data...');
                     currentText = '';
                     display.text('****');
@@ -163,6 +174,5 @@
             }
         });
     </script>
-    <a href="https://codepen.io/FlyingEmu">Original by FlyingEmu</a>
 </body>
 </html>
