--- a/admin-secret.html
+++ b/admin-secret.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>4-Digit Keypad</title>
+    <link rel="stylesheet" href="style.css" />
     <style>
         body {
-            background: #ffffff;
             user-select: none;
             margin: 0;
             padding: 20px;
