--- a/admin-secret.html
+++ b/admin-secret.html
@@ -2,28 +2,28 @@
 <html>
 <head>
     <title>4-Digit Keypad</title>
-    <link rel="stylesheet" href="style.css" />
     <style>
         body {
             user-select: none;
             margin: 0;
             padding: 20px;
             display: flex;
-            flex-direction: column; /* Allows main content and footer/credits to stack */
+            flex-direction: column;
             justify-content: center;
-            align-items: center; /* Center the entire block */
+            align-items: center;
             min-height: 100vh;
             font-family: Arial, sans-serif;
+            background-color: #0d0d0d; /* Deep black body background */
         }
-
         #pwdcontainer {
-            background: #2b2b2b;
+            background: #111111; /* Very dark container */
             margin-top: 50px;
             width: 440px;
             height: 550px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Stronger shadow */
             border-radius: 8px;
             overflow: hidden;
+            border: 2px solid #0056b3; /* Thin blue border around the whole container */
         }
 
         #screen {
@@ -31,12 +31,13 @@
             width: 440px;
         }
 
+        /* Display screen with a black background and blue text/border */
         #display {
-            background: #1a1a1a;
+            background: #000000; /* Pure black screen background */
             padding: 10px;
             margin: 10px;
-            color: rgb(0, 200, 0);
-            border: 1px solid rgb(0, 100, 0);
+            color: #4dc3ff; /* Bright light blue for the text */
+            border: 2px solid #004080; /* Darker blue border */
             height: 65px;
             font: 60px Calibri Light, sans-serif;
             text-align: center;
@@ -50,41 +51,45 @@
             padding: 0;
         }
 
+        /* Keypad button styles */
         .keypad {
-            color: rgb(0, 200, 0);
+            color: #4dc3ff; /* Bright light blue text */
             float: left;
-            border: 1px solid rgb(0, 100, 0);
+            border: 1px solid #004080; /* Darker blue border */
             width: 108px;
             height: 108px;
             font: 25px Calibri Light, sans-serif;
             text-align: center;
             line-height: 108px;
             transition: 0.2s;
-            background: #444;
+            background: #222222; /* Dark gray/black button base */
+            cursor: pointer; /* Add cursor pointer for better UX */
         }
 
+        /* Hover effect: bright blue shadow and lighter background */
         .keypad:hover {
-            box-shadow: 0 0 15px rgb(0, 200, 0);
+            box-shadow: 0 0 15px #00aaff; /* Vibrant blue glow on hover */
             position: relative;
-            background: #666;
+            background: #333333; /* Slightly lighter background on hover */
         }
 
+        /* Active (click) effect: subdued blue shadow and slight press down */
         .keypad:active {
             transition: all 0.05s;
             transform: translatey(3px);
-            box-shadow: 0 0 5px rgb(0, 200, 0);
+            box-shadow: 0 0 5px #0077cc; /* Subdued blue glow on active */
         }
         
-        /* New styles for the credit link */
+        /* New styles for the credit link - more subtle black/blue */
         #credits {
             margin-top: 20px;
-            font-size: 10px; /* Much smaller */
-            color: #888; /* Subtle gray text */
-            text-decoration: none; /* Remove underline */
+            font-size: 10px;
+            color: #666; /* Subtle dark gray text */
+            text-decoration: none;
         }
         
         #credits:hover {
-            color: #000;
+            color: #4dc3ff; /* Light blue on hover for visibility */
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -149,6 +154,7 @@
                         return;
                     default:
                         if (currentText.length < MAX_LENGTH && key.length === 1) {
+                            // Only allow digits, +, *, #
                             if (key.match(/^[0-9+*#]$/)) {
                                 currentText += key;
                             }
@@ -156,13 +162,18 @@
                         break;
                 }
 
-                let displayValue = currentText.padEnd(MAX_LENGTH, '*');
+                // Mask the input with '*' and update the display
+                let maskedText = '*'.repeat(currentText.length);
+                let displayValue = maskedText.padEnd(MAX_LENGTH, '*');
                 display.text(displayValue);
             });
 
             function checkCode(code) {
                 if (codeLinks[code]) {
-                    window.location.href = codeLinks[code];
+                    // This part would navigate to a new page in a real environment
+                    // For a basic demo, we'll just alert.
+                    alert(`Code accepted: ${code}. Redirecting to ${codeLinks[code]}!`);
+                    // window.location.href = codeLinks[code]; 
 
                     currentText = '';
                     display.text('****');
