--- a/admin-secret.html
+++ b/admin-secret.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>4-Digit Keypad</title>
+     <link rel="stylesheet" href="style.css" />
     <style>
         body {
             user-select: none;
@@ -13,7 +14,6 @@
             align-items: center;
             min-height: 100vh;
             font-family: Arial, sans-serif;
-            background-color: #0d0d0d; /* Deep black body background */
         }
         #pwdcontainer {
             background: #111111; /* Very dark container */
