--- a/admin-secret.html
+++ b/admin-secret.html
@@ -2,28 +2,28 @@
 <html>
 <head>
     <title>4-Digit Keypad</title>
-     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
         body {
             user-select: none;
             margin: 0;
             padding: 20px;
             display: flex;
-            flex-direction: column;
+            flex-direction: column; 
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             font-family: Arial, sans-serif;
         }
+
         #pwdcontainer {
-            background: #111111; /* Very dark container */
+            background: #1c1c1c; /* New: Dark container background */
             margin-top: 50px;
             width: 440px;
             height: 550px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Stronger shadow */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
             border-radius: 8px;
             overflow: hidden;
-            border: 2px solid #0056b3; /* Thin blue border around the whole container */
         }
 
         #screen {
@@ -31,13 +31,12 @@
             width: 440px;
         }
 
-        /* Display screen with a black background and blue text/border */
         #display {
-            background: #000000; /* Pure black screen background */
+            background: #000000; /* New: Pure black screen background */
             padding: 10px;
             margin: 10px;
-            color: #4dc3ff; /* Bright light blue for the text */
-            border: 2px solid #004080; /* Darker blue border */
+            color: #4da6ff; /* New: Light blue text */
+            border: 1px solid #0055aa; /* New: Darker blue border */
             height: 65px;
             font: 60px Calibri Light, sans-serif;
             text-align: center;
@@ -51,45 +50,41 @@
             padding: 0;
         }
 
-        /* Keypad button styles */
         .keypad {
-            color: #4dc3ff; /* Bright light blue text */
+            color: #4da6ff; /* New: Light blue text */
             float: left;
-            border: 1px solid #004080; /* Darker blue border */
+            border: 1px solid #0055aa; /* New: Darker blue border */
             width: 108px;
             height: 108px;
             font: 25px Calibri Light, sans-serif;
             text-align: center;
             line-height: 108px;
             transition: 0.2s;
-            background: #222222; /* Dark gray/black button base */
-            cursor: pointer; /* Add cursor pointer for better UX */
+            background: #333333; /* New: Darker button base */
         }
 
-        /* Hover effect: bright blue shadow and lighter background */
         .keypad:hover {
-            box-shadow: 0 0 15px #00aaff; /* Vibrant blue glow on hover */
+            box-shadow: 0 0 15px #0099ff; /* New: Vibrant blue glow on hover */
             position: relative;
-            background: #333333; /* Slightly lighter background on hover */
+            background: #444444; /* New: Slightly lighter background on hover */
         }
 
-        /* Active (click) effect: subdued blue shadow and slight press down */
         .keypad:active {
             transition: all 0.05s;
             transform: translatey(3px);
-            box-shadow: 0 0 5px #0077cc; /* Subdued blue glow on active */
+            box-shadow: 0 0 5px #0077cc; /* New: Muted blue glow on active */
         }
         
-        /* New styles for the credit link - more subtle black/blue */
+        /* New styles for the credit link */
         #credits {
             margin-top: 20px;
-            font-size: 10px;
+            font-size: 10px; 
             color: #666; /* Subtle dark gray text */
             text-decoration: none;
         }
         
         #credits:hover {
-            color: #4dc3ff; /* Light blue on hover for visibility */
+            color: #4da6ff; /* Light blue on hover */
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -154,7 +149,6 @@
                         return;
                     default:
                         if (currentText.length < MAX_LENGTH && key.length === 1) {
-                            // Only allow digits, +, *, #
                             if (key.match(/^[0-9+*#]$/)) {
                                 currentText += key;
                             }
@@ -170,10 +164,7 @@
 
             function checkCode(code) {
                 if (codeLinks[code]) {
-                    // This part would navigate to a new page in a real environment
-                    // For a basic demo, we'll just alert.
-                    alert(`Code accepted: ${code}. Redirecting to ${codeLinks[code]}!`);
-                    // window.location.href = codeLinks[code]; 
+                    window.location.href = codeLinks[code];
 
                     currentText = '';
                     display.text('****');
