--- a/admin-secret.html
+++ b/admin-secret.html
@@ -14,10 +14,11 @@
             align-items: center;
             min-height: 100vh;
             font-family: Arial, sans-serif;
+            background-color: #0d0d0d; /* Deep black background */
         }
 
         #pwdcontainer {
-            background: #1c1c1c; /* New: Dark container background */
+            background: #1c1c1c; /* Dark container background */
             margin-top: 50px;
             width: 440px;
             height: 550px;
@@ -32,11 +33,11 @@
         }
 
         #display {
-            background: #000000; /* New: Pure black screen background */
+            background: #000000; /* Pure black screen background */
             padding: 10px;
             margin: 10px;
-            color: #4da6ff; /* New: Light blue text */
-            border: 1px solid #0055aa; /* New: Darker blue border */
+            color: #4da6ff; /* Light blue text */
+            border: 1px solid #0055aa; /* Darker blue border */
             height: 65px;
             font: 60px Calibri Light, sans-serif;
             text-align: center;
@@ -51,28 +52,28 @@
         }
 
         .keypad {
-            color: #4da6ff; /* New: Light blue text */
+            color: #4da6ff; /* Light blue text */
             float: left;
-            border: 1px solid #0055aa; /* New: Darker blue border */
+            border: 1px solid #0055aa; /* Darker blue border */
             width: 108px;
             height: 108px;
             font: 25px Calibri Light, sans-serif;
             text-align: center;
             line-height: 108px;
             transition: 0.2s;
-            background: #333333; /* New: Darker button base */
+            background: #333333; /* Darker button base */
         }
 
         .keypad:hover {
-            box-shadow: 0 0 15px #0099ff; /* New: Vibrant blue glow on hover */
+            box-shadow: 0 0 15px #0099ff; /* Vibrant blue glow on hover */
             position: relative;
-            background: #444444; /* New: Slightly lighter background on hover */
+            background: #444444; /* Slightly lighter background on hover */
         }
 
         .keypad:active {
             transition: all 0.05s;
             transform: translatey(3px);
-            box-shadow: 0 0 5px #0077cc; /* New: Muted blue glow on active */
+            box-shadow: 0 0 5px #0077cc; /* Muted blue glow on active */
         }
         
         /* New styles for the credit link */
@@ -92,7 +93,7 @@
 <body>
 
     <div id="pwdcontainer">
-        <div id="screen"><div id="display">****</div></div>
+        <div id="screen"><div id="display"></div></div>
         <nav>
             <ul>
                 <li class="keypad" href="#">7</li>
@@ -121,7 +122,9 @@
         $(document).ready(function () {
             const MAX_LENGTH = 4;
             const display = $('#display');
-            let currentText = display.text().replace(/\*/g, '');
+            // Initialize currentText to an empty string since we removed the **** from HTML
+            let currentText = ''; 
+            display.text(currentText.padEnd(MAX_LENGTH, '_')); // Use an underscore as an unentered slot
 
             const codeLinks = {
                 '1865': '/aliceinwonderland.html',
@@ -156,23 +159,22 @@
                         break;
                 }
 
-                // Mask the input with '*' and update the display
-                let maskedText = '*'.repeat(currentText.length);
-                let displayValue = maskedText.padEnd(MAX_LENGTH, '*');
+                // *** This is the key change: Display currentText directly ***
+                // We also pad the remaining slots with a placeholder like '_'
+                let displayValue = currentText.padEnd(MAX_LENGTH, '_');
                 display.text(displayValue);
             });
 
             function checkCode(code) {
                 if (codeLinks[code]) {
                     window.location.href = codeLinks[code];
-
-                    currentText = '';
-                    display.text('****');
                 } else {
                     alert('Code Accepted. Searching for data...');
-                    currentText = '';
-                    display.text('****');
                 }
+                
+                // Reset the display after checking the code
+                currentText = '';
+                display.text(currentText.padEnd(MAX_LENGTH, '_'));
             }
         });
     </script>
