--- a/admin-secret.html
+++ b/admin-secret.html
@@ -22,7 +22,6 @@
             margin-bottom: 15px;
             text-align: center;
             letter-spacing: 2px;
-            /* text-shadow removed */
         }
 
         #pwdcontainer {
@@ -72,15 +71,13 @@
         }
 
         .keypad:hover {
-            /* box-shadow removed */
             position: relative;
-            background: #444444; 
+            background: #444444;
         }
 
         .keypad:active {
             transition: all 0.05s;
             transform: translatey(3px);
-            /* box-shadow removed */
         }
         
         #credits {
@@ -114,7 +111,6 @@
                 <li class="keypad" href="#">⇦</li>
                 <li class="keypad" href="#">1</li>
                 <li class="keypad" href="#">2</li>
-                <li class="keypad" href="#">3</li>
                 <li class="keypad" href="#">+</li>
                 <li class="keypad" href="#">*</li>
                 <li class="keypad" href="#">0</li>
@@ -145,7 +141,8 @@
                 
                 const placeholder = remainingLength > 0 ? '_'.repeat(remainingLength) : '';
 
-                const displayValue = '#' + currentText + placeholder;
+                // *** CHANGE: Removed the '#' prefix here ***
+                const displayValue = currentText + placeholder;
 
                 display.text(displayValue);
             }
