--- a/admin-secret.html
+++ b/admin-secret.html
@@ -181,7 +181,7 @@
                 if (codeLinks[code]) {
                     window.location.href = codeLinks[code];
                 } else {
-                    alert('Code Accepted. Searching for data...');
+                    alert('WRONG. try again.');
                 }
                 
                 currentText = '';
