--- a/index.html
+++ b/index.html
@@ -48,10 +48,34 @@
         }
         h1 {
             font-family:Mountains of Christmas;
-
+            text-align: center;
         }
         p {
             font-family: "Cedarville Cursive", cursive;
+        }
+
+        /* NEW CSS FOR BLENDING BUTTON */
+        .admin-button {
+            position: fixed; /* Keep it in the same spot even when scrolling */
+            bottom: 10px;    /* 10 pixels from the bottom */
+            right: 10px;     /* 10 pixels from the right */
+            
+            /* Minimalist Styling */
+            background: none;           /* No background color */
+            border: 1px solid #ccc;     /* Subtle grey border */
+            color: #777;                /* Light grey text color */
+            padding: 4px 8px;           /* Small padding */
+            font-size: 10px;            /* Very small font size */
+            font-family: Arial, sans-serif; /* Use a non-stylized font to look like a utility element */
+            text-transform: uppercase;  /* ALL CAPS to look like a small label */
+            cursor: pointer;
+            transition: color 0.2s, border-color 0.2s; /* Gentle transition for interaction */
+            z-index: 100; /* Ensure it is on top of other content */
+        }
+
+        .admin-button:hover {
+            color: #000;
+            border-color: #000;
         }
     </style>
 </head>
@@ -59,7 +83,7 @@
     <main>
     <div class="header">
         <h1>
-            Welcome to Alice in Wonder<a class="secret" href="/end.html">end</a>!
+            Welcome to Alice in Wonder<a class="secret" href="/end.html" style="text-decoration: none; color: inherit;">end</a>!
         </h1>
     </div>
     <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
@@ -67,7 +91,8 @@
     <div id="image">
         <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
     </div>
- <button style="text-align: right;">ADMIN ONLY</button>
+ 
+    <a href="/admin-secret.html" class="admin-button" title="Site Utility">Admin Only</a>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
