--- a/aboutthem.html
+++ b/aboutthem.html
@@ -83,13 +83,15 @@
     <main>
     <div class="header">
         <h1>
-            Welcome to Alice in Wonder<a class="secret" href="/end.html" style="text-decoration: none; color: inherit;">end</a>!
+Welcome! Learn your favorite characters!
         </h1>
     </div>
-    <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
+    <center><p>This shows our gorgeous variety of characters!</p></center>
 
     <div id="image">
-        <img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/>
+        <img src="/ohalicemypoornaivealice.png"/>
+         <img src="/therabbit.png"/>
+         <img src="/themaddestofourhatters"/>
     </div>
  
     <a href="/admin-secret.html" class="admin-button" title="Site Utility">Admin Only</a>
