--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
 
     <div id="image">
-        <a href="/aboutthem.html"><img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true" alt="Alice falling down the rabbit hole"/></a>
+        <a href="/aboutthem.html"><img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true"/></a>
     </div>
  
     <a href="/admin-secret.html" class="admin-button" title="Site Utility">Admin Only</a>
