--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </h1>
     </div>
     <center><p>A wonderful and unique world of rabbits, hats, and cards! come and join the fun!</p></center>
+        <p>test</p>
 
     <div id="image">
         <a href="/aboutthem.html"><img src="https://github.com/kaiberriezz/aliceinwonderend/blob/main/downtherabbithole.png?raw=true"/></a>
