--- a/aboutthem.html
+++ b/aboutthem.html
@@ -89,8 +89,8 @@ Welcome! Learn your favorite characters!
     <center><p>This shows our gorgeous variety of characters!</p></center>
 
     <div id="image">
-        <img src="https://aliceinwonderend.vercel.app/ohalicemypoornaivealice.png"/>
-         <img src="https://aliceinwonderend.vercel.app/therabbit.png"/>
+        <img src="/ohalicemypoornaivealice.png"/>
+         <img src="/therabbit.png"/>
          <img src="/themaddestofourhatters.png"/>
     </div>
  
