--- a/aboutthem.html
+++ b/aboutthem.html
@@ -91,7 +91,7 @@ Welcome! Learn your favorite characters!
     <div id="image">
         <img src="/ohalicemypoornaivealice.png"/>
          <img src="/therabbit.png"/>
-         <img src="/themaddesthatter"/>
+         <img src="/themaddesthatter.png"/>
     </div>
  
     <a href="/admin-secret.html" class="admin-button" title="Site Utility">Admin Only</a>
