--- a/creator.html
+++ b/creator.html
@@ -1,1 +1,5 @@
- <link rel="stylesheet" href="path/to/style.css">
+<!DOCTYPE html>
+<head>
+<link rel="stylesheet" href="/style.css">
+ <title>The Creator!</title>
+ </head>
