--- a/creator.html
+++ b/creator.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" href="/style.css">
  <title>The Creator!</title>
+   <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery46/da13054d.gif?v=29416114">
  </head>
+<body><div id="header">
+<h1>About The Creator</h1>
+</div></body>
+</html>
