--- a/creator.html
+++ b/creator.html
@@ -5,7 +5,7 @@
  <title>The Creator!</title>
    <link rel="icon" type="image/png" href="https://pixels.crd.co/assets/images/gallery46/da13054d.gif?v=29416114">
  </head>
-<body><div id="header">
+<body><div class="header">
 <h1>About The Creator</h1>
 </div></body>
 </html>
