--- a/creator.html
+++ b/creator.html
@@ -7,5 +7,10 @@
  </head>
 <body><div class="header">
 <h1>About The Creator</h1>
-</div></body>
+</div>
+
+<div class="image">
+<img src="/me.png">
+ <p>Hello! My name is kai! I'm the creator and artist of Alice in WonderEnd! I like to draw alot and making content but nowadays I use tumblr and youtube instead of the modern apps.</p>
+</div><</body>
 </html>
