--- a/creator.html
+++ b/creator.html
@@ -12,5 +12,5 @@
 <div class="image">
 <img src="/me.png">
  <p>Hello! My name is kai! I'm the creator and artist of Alice in WonderEnd! I like to draw alot and making content but nowadays I use tumblr and youtube instead of the modern apps.</p>
-</div><</body>
+</div></body>
 </html>
